--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>PokeHunter</title>
+    <link rel="stylesheet" href="assets/style.css" type="text/css">
     <script type="text/javascript" src="./bundle.js"></script>
   </head>
   <body>
