--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script type="text/javascript" src="./bundle.js"></script>
   </head>
   <body>
-    <main id="root"></main>
+    <main id="app"></main>
   </body>
 </html>
