--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>PokeHunter</title>
     <link rel="stylesheet" href="assets/style.css" type="text/css">
     <script type="text/javascript" src="./bundle.js"></script>
+    <link rel="stylesheet" type="text/css" href="./bundle.css" />
   </head>
   <body>
     <main id="app"></main>
