--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>PokeHunter</title>
-    <link rel="stylesheet" href="assets/style.css" type="text/css">
-    <script type="text/javascript" src="./bundle.js"></script>
+    <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="./bundle.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCESRF_mkxO_a3Trn8J-nTb_UK5Too52Qs"></script>
+    <script type="text/javascript" src="./bundle.js"></script>
   </head>
   <body>
     <main id="app"></main>
+
   </body>
 </html>
