--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="./bundle.css" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCESRF_mkxO_a3Trn8J-nTb_UK5Too52Qs"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./bundle.js"></script>
   </head>
   <body>
