--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>PokeHunter</title>
+    <link rel="stylesheet" type="text/css"
+      href="https://fonts.googleapis.com/css?family=Cantarell">
     <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="./bundle.css" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCESRF_mkxO_a3Trn8J-nTb_UK5Too52Qs"></script>
