Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
       href="https://fonts.googleapis.com/css?family=Cantarell">
     <link rel="stylesheet" href="assets/style.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="./bundle.css" />
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-91940833-3', 'auto');
+    ga('send', 'pageview');
+
+    </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCESRF_mkxO_a3Trn8J-nTb_UK5Too52Qs"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="./bundle.js"></script>
